--- a/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
@@ -1,11 +1,4 @@
 <div class="person-card-list">
-    <div class="person-card" ng-repeat="person in $ctrl.people" ng-click="$ctrl.selectPerson(person.userKey)">
-        <div class="person-card-image"></div>
-        <div class="person-card-details">
-            <div class="person-card-row-1">{{ person.givenName }} {{ person.sn }}</div>
-            <div class="person-card-row-2">{{ person.title }}</div>
-            <div class="person-card-row-3">{{ person.telephoneNumber }}</div>
-            <div class="person-card-row-4">{{ person.mail }}</div>
-        </div>
-    </div>
+    <person-card person="person" ng-repeat="person in $ctrl.people" ng-click="$ctrl.selectPerson(person.userKey)">
+    </person-card>
 </div>
