Introduced photo URL for person card

--- a/src/main/angular/src/peoplesearch/person-card.component.html
+++ b/src/main/angular/src/peoplesearch/person-card.component.html
@@ -1,4 +1,4 @@
-<div class="person-card-image"></div>
+<img class="person-card-image" ng-src="{{$ctrl.photoURL}}" />
 <div class="person-card-details">
     <div class="person-card-row-1" ng-bind="$ctrl.data[0]"></div>
     <div class="person-card-row-2" ng-bind="$ctrl.data[1]"></div>
