--- a/src/main/angular/src/peoplesearch/orgchart.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart.component.html
@@ -2,24 +2,25 @@
 <div id="orgchart-close" ng-click="$ctrl.close()"></div>
 
 <div id="orgchart-content" class="ng-cloak">
-    <div class="orgchart-primary-person-connector" class="ng-cloak"></div>
-
-    <div class="orgchart-management-title orgchart-title">Management</div>
     <div class="orgchart-management" ng-if="$ctrl.managementChain.length" >
-        <div class="orgchart-manager" ng-repeat="manager in $ctrl.managementChain"
-             ng-click="$ctrl.selectPerson(manager.userKey)">
-            <div class="orgchart-separator" ng-class="{first:$first,last:$last}"></div>
-            <div class="orgchart-picture">
-                <img ng-src="{{ manager.photoURL }}" />
-            </div>
-            <div class="orgchart-manager-fields">
-                <div class="orgchart-field orgchart-field-0">{{ manager.displayNames[0] }}</div>
-                <div class="orgchart-field orgchart-field-1">{{ manager.displayNames[1] }}</div>
+        <div class="orgchart-management-connector"></div>
+        <div class="orgchart-title">Management</div>
+        <div class="orgchart-manager-list">
+            <div class="orgchart-manager" ng-repeat="manager in $ctrl.managementChain"
+                 ng-click="$ctrl.selectPerson(manager.userKey)">
+                <div class="orgchart-separator" ng-class="{first:$first,last:$last}"></div>
+                <div class="orgchart-picture">
+                    <img ng-src="{{ manager.photoURL }}" />
+                </div>
+                <div class="orgchart-manager-fields">
+                    <div class="orgchart-field orgchart-field-0">{{ manager.displayNames[0] }}</div>
+                    <div class="orgchart-field orgchart-field-1">{{ manager.displayNames[1] }}</div>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="orgchart-primary-person">
+    <div class="orgchart-primary-person" ng-class="$ctrl.primaryPersonStatus">
         <img class="orgchart-picture" ng-src="{{ $ctrl.person.photoURL }}" />
         <div class="orgchart-num-reports" ng-if="$ctrl.directReports.length">{{ $ctrl.directReports.length }}</div>
 
@@ -32,10 +33,13 @@
         <div class="orgchart-primary-field orgchart-field orgchart-field-6">{{ $ctrl.person.displayNames[6] }}</div>
     </div>
 
-    <div class="orgchart-direct-reports-title orgchart-title">Direct Reports</div>
-    <div class="orgchart-direct-reports person-card-list" ng-if="$ctrl.directReports.length">
-        <person-card person="directReport" ng-repeat="directReport in $ctrl.directReports"
-            ng-click="$ctrl.selectPerson(directReport.userKey)">
-        </person-card>
+    <div class="orgchart-direct-reports" ng-if="$ctrl.directReports.length">
+        <div class="orgchart-direct-reports-connector"></div>
+        <div class="orgchart-title">Direct Reports</div>
+        <div class="person-card-list">
+            <person-card person="directReport" ng-repeat="directReport in $ctrl.directReports"
+                ng-click="$ctrl.selectPerson(directReport.userKey)">
+            </person-card>
+        </div>
     </div>
 </div>
