--- a/src/main/angular/src/peoplesearch/peoplesearch-table.component.scss
+++ b/src/main/angular/src/peoplesearch/peoplesearch-table.component.scss
@@ -1,18 +1,27 @@
 people-search-table {
-    border: 1px solid #dae1e1;
-    bottom: 0;
-    left: 0;
-    overflow: auto;
-    position: absolute;
-    right: 0;
-    top: 0;
+    display: flex;
+    flex-flow: column nowrap;
+    overflow-x: auto;
 
     > table {
-        border: 0 none;
+        border: 1px solid #dae1e1;
+        border-collapse: collapse;
+
+        flex: 1 1;
+        margin-top: 10px;
         width: 100%;
 
+        > tbody {
+            > tr {
+                cursor: pointer;
+
+                &:hover {
+                    background-color: #eeeeee;
+                }
+            }
+        }
+
         th, td {
-            border-bottom: 1px solid #dae1e1;
             font-weight: normal;
             overflow: hidden;
             padding: 5px;
@@ -23,6 +32,15 @@ people-search-table {
         th {
             background-color: #eeeeee;
             color: #697c87;
+        }
+
+        tr {
+            &:not(:last-child) {
+                > th,
+                > td {
+                    border-bottom: 1px solid #dae1e1;
+                }
+            }
         }
     }
 }
