--- a/src/main/angular/src/peoplesearch/person-card.component.html
+++ b/src/main/angular/src/peoplesearch/person-card.component.html
@@ -1,7 +1,32 @@
-<div class="person-card-image"></div>
-<div class="person-card-details">
-    <div class="person-card-row-1" ng-bind="$ctrl.data[0]"></div>
-    <div class="person-card-row-2" ng-bind="$ctrl.data[1]"></div>
-    <div class="person-card-row-3" ng-bind="$ctrl.data[2]"></div>
-    <div class="person-card-row-4" ng-bind="$ctrl.data[3]"></div>
+<div class="person-card-content" ng-switch="$ctrl.size">
+    <div class="avatar">
+        <img ng-src="{{ $ctrl.person.photoURL }}" alt="User photo">
+    </div>
+    <div class="reports" ng-if="$ctrl.directReports.length" ng-bind="$ctrl.directReports.length"></div>
+
+    <div class="details" ng-switch-when="small">
+        <div ng-bind="$ctrl.person.displayNames[0]"></div>
+        <div ng-bind="$ctrl.person.displayNames[1]"></div>
+    </div>
+
+    <div class="details" ng-switch-when="large">
+        <div ng-bind="$ctrl.person.displayNames[0]"></div>
+        <div ng-bind="$ctrl.person.displayNames[1]"></div>
+        <div ng-bind="$ctrl.person.displayNames[2]"></div>
+        <div ng-bind="$ctrl.person.displayNames[3]"></div>
+
+        <div class="secondary-details">
+            <div ng-bind="$ctrl.person.displayNames[4]"></div>
+            <div ng-bind="$ctrl.person.displayNames[5]"></div>
+            <div ng-bind="$ctrl.person.displayNames[6]"></div>
+            <div ng-bind="$ctrl.person.displayNames[7]"></div>
+        </div>
+    </div>
+
+    <div class="details" ng-switch-default>
+        <div ng-bind="$ctrl.data[0]"></div>
+        <div ng-bind="$ctrl.data[1]"></div>
+        <div ng-bind="$ctrl.data[2]"></div>
+        <div ng-bind="$ctrl.data[3]"></div>
+    </div>
 </div>
