--- a/src/main/angular/src/peoplesearch/person-card.component.scss
+++ b/src/main/angular/src/peoplesearch/person-card.component.scss
@@ -4,20 +4,24 @@ $text-color-subtext: #808080;
 $person-card-bg-color: #eef2f2;
 $person-card-hover-bg-color: #f6f9f8;
 $person-card-border-color: #28a9e1;
-$person-card-height: 60px;
+$person-card-height: 82px;
 $person-card-width: 200px;
-$person-card-image-size: 50px;
+$person-card-avatar-size: 50px;
 $person-card-spacing: 10px;
+
+$person-card-large-avatar-size: 65px;
 
 person-card {
   background-color: $person-card-bg-color;
   border: 1px solid $person-card-bg-color;
+  border-radius: 3px;
+  box-sizing: border-box;
   cursor: pointer;
-  display: inline-flex;
-  flex-flow: row nowrap;
+  display: block;
   height: $person-card-height;
-  overflow: hidden;
   padding: $person-card-spacing;
+  position: relative;
+  text-align: left;
   vertical-align: top;
   width: $person-card-width;
 
@@ -26,39 +30,130 @@ person-card {
     border-color: $person-card-border-color;
   }
 
-  > .person-card-image {
-    background-color: gray;
-    flex: 0 0 $person-card-image-size;
-    height: $person-card-image-size;
-    margin-right: $person-card-spacing;
-    width: $person-card-image-size;
+  &[size="large"] {
+    background-color: #ffffff;
+    border: 3px solid #808080;
+    border-radius: 3px;
+    height: 166px;
+    width: 326px;
+    max-width: 100%;
+    min-width: 310px;
 
-    img {
-      height: 100%;
-      width: 100%;
+    > .person-card-content {
+      flex-flow: row wrap;
+
+      > .avatar {
+        flex: 0 0 $person-card-large-avatar-size;
+        height: $person-card-large-avatar-size;
+        margin-right: 15px;
+        width: $person-card-large-avatar-size;
+
+        img {
+          height: 100%;
+          width: 100%;
+        }
+      }
     }
   }
 
-  > .person-card-details {
-    flex-grow: 1;
-    width: $person-card-width - $person-card-image-size;
+  &[size="small"] {
+    border: none;
+    background-color: transparent;
+    height: 96px;
+    padding: 0;
+    width: 120px;
 
-    > div {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
+    > .person-card-content {
+      display: block;
+      text-align: center;
+
+      > .avatar {
+        border: 3px solid #808080;
+        border-radius: 100%;
+        height: $person-card-avatar-size;
+        margin: 0 auto;
+        width: $person-card-avatar-size;
+
+        > img {
+          border-radius: 100%;
+        }
+
+        &:hover {
+          border-color: $person-card-border-color;
+        }
+      }
+
+      > .details {
+        background-color: white;
+        margin-top: 8px;
+        width: 100%;
+
+        :first-child {
+          font-size: 13px;
+          line-height: 13px;
+        }
+      }
+    }
+  }
+
+  > .person-card-content {
+    display: flex;
+    flex-flow: row nowrap;
+    overflow: hidden;
+
+    > .avatar {
+      background-color: gray;
+      flex: 0 0 $person-card-avatar-size;
+      height: $person-card-avatar-size;
+      margin-right: $person-card-spacing;
+      width: $person-card-avatar-size;
+
+      img {
+        height: 100%;
+        width: 100%;
+      }
     }
 
-    > .person-card-row-1 {
-      color: $text-color;
-      font-size: 14px;
+    > .details {
+      flex-grow: 1;
+      width: $person-card-width - $person-card-avatar-size;
+
+      > div {
+        line-height: 16px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+
+      > :first-child {
+        color: $text-color;
+        font-size: 14px;
+      }
+
+      > :not(:first-child) {
+        color: $text-color-subtext;
+        font-size: 12px;
+      }
+
+      > .secondary-details {
+        border-top: 1px solid #dae1e1;
+        margin-top: 20px;
+        padding-top: 8px;
+      }
     }
 
-    > .person-card-row-2,
-    > .person-card-row-3,
-    > .person-card-row-4 {
-      color: $text-color-subtext;
+    > .reports {
+      background-color: #dae1e1;
+      border-radius: 2px;
+      color: #434c50;
       font-size: 12px;
+      height: 18px;
+      line-height: 18px;
+      position: absolute;
+      right: 3px;
+      text-align: center;
+      top: 3px;
+      min-width: 25px;
     }
   }
 }
