--- a/src/main/webapp/public/resources/themes/pwm/configStyle.css
+++ b/src/main/webapp/public/resources/themes/pwm/configStyle.css
@@ -155,8 +155,9 @@ html {
     max-height: 450px;
     overflow-y: scroll;
     background-color: #e9e9e9;
-    border: 1px solid black;
-    border-radius: 4px;
+    border: 1px solid #B2B1B9;
+    padding: 2px;
+    border-radius: 0;
     color: black;
 }
 
