--- a/src/main/angular/src/peoplesearch/orgchart.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart.component.html
@@ -4,7 +4,9 @@
     <icon-button ng-click="$ctrl.close()"></icon-button>
 </app-bar>
 
-<div class="org-chart-section managers" ng-if="$ctrl.hasManagementChain() || $ctrl.isPersonOrphan()">
+<div class="org-chart-section managers"
+     ng-class="{ 'overflow': $ctrl.showingOverflow() }"
+     ng-if="$ctrl.hasManagementChain() || $ctrl.isPersonOrphan()">
     <h3>Management</h3>
     <div ng-if="!$ctrl.isPersonOrphan()">
         <div class="manager"
@@ -37,9 +39,5 @@
                      ng-repeat="directReport in $ctrl.directReports"
                      ng-click="$ctrl.selectPerson(directReport.userKey)">
         </person-card>
-    </div>
-
-    <div class="person-card-list" ng-if="!$ctrl.hasDirectReports()">
-        <span class="empty-section-label">0 direct reports</span>
     </div>
 </div>
