Displaying avatar images in PersonCardComponent as background-images for background-size:cover functionality. Added sample avatar images for development environment.

--- a/src/main/angular/src/peoplesearch/person-card.component.html
+++ b/src/main/angular/src/peoplesearch/person-card.component.html
@@ -1,7 +1,5 @@
 <div class="person-card-content" ng-switch="$ctrl.size">
-    <div class="avatar">
-        <img ng-src="{{ $ctrl.person.photoURL }}" ng-if="$ctrl.person.photoURL" alt="User photo">
-    </div>
+    <div class="avatar" ng-style="$ctrl.getAvatarStyle()" aria-label="User avatar"></div>
     <div class="reports" ng-if="$ctrl.directReports.length" ng-bind="$ctrl.directReports.length"></div>
 
     <div class="details" ng-switch-when="small">
